# python-u1dbcipher

./: .gitignore  CMakeLists.txt  INSTALL.rst  MANIFEST.in  Makefile  README  README.rst  setup.py
cmake/Modules/: FindCython.cmake  FindSqlcipher.cmake  ReplicatePythonSourceTree.cmake
cu1db/: __init__.py  _u1db.pyx
include/u1db/: u1db.h  u1db_internal.h
src/: CMakeLists.txt  Makefile  cmake_install.cmake  u1db.c  u1db_http_sync_target.c  u1db_query.c  u1db_schema.c  u1db_sync_target.c
u1dbcipher/: __init__.py  _u1db.pyx
